--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ export DELTA_API_SECRET="89Pv4SCxEb5YrX2lbMBNhJPDKFJKHDFqJtXfZ6BKu18M0kMdoV4r8pT
 export TELEGRAM_BOT_TOKEN = "7617064340:AAHUXzGt5CslLjvKsMXMROotu6kbiMhmtgk"
 export TELEGRAM_CHAT_ID = "1270218315"
 
+
+export TEL_BOT_TOKEN = "8502177948:AAETnPcLVEse93t6aHBr3l90Q09URQNZ5_w"
+export TEL_CHAT_ID = "1270218315"
