--- a/.env
+++ b/.env
@@ -7,3 +7,6 @@ export TELEGRAM_CHAT_ID = "1270218315"
 
 export TEL_BOT_TOKEN = "8502177948:AAETnPcLVEse93t6aHBr3l90Q09URQNZ5_w"
 export TEL_CHAT_ID = "1270218315"
+
+export BOT_TOKEN = "8380577915:AAF6RuYl_YP1N8V7uJ6PZ9AVxnmRblw1sS4"
+export CHAT_ID = "1270218315"
