--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,35 @@
+# =============================
 # Python virtual environment
+# =============================
 venv/
+.venv/
 
+# =============================
 # Compiled Python files
+# =============================
 __pycache__/
 *.pyc
 *.pyo
 
-# Generated data files
+# =============================
+# Environment variables (API keys)
+# =============================
+.env
+
+# =============================
+# Auth / Access tokens
+# =============================
+auth/api_key/access_token.txt
+auth/api_key/
+*.token
+
+# =============================
+# Generated strategy data
+# =============================
 data/price_trend_strategy/*_processed.csv
 data/price_trend_following_strategy/*_processed.csv
 
+# =============================
 # Logs
+# =============================
 *.log
-*.txtauth/api_key/access_token.txt
